--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
+:active, :hover, :focus {
+  outline: 0;
+  outline-offset: 0;
+}
+.item{
+  display: grid;
+  grid-template-columns:30px 100px 50px;
+  justify-self: center;
   text-align: center;
+  margin: 0 auto;
+  width: 300px;
+}
+.quantity{
+  display: grid;
+  grid-template-columns:30px 100px 50px;
+}
+.quantity button{
+  width: 20px;
+  height: 20px;
+}
+.item input[type='checkbox']{
+  width: 20px;
+}
+.shopList{
+  text-align: center;
+  background-color:cadetblue;
+  width: 500px;
+  margin: 50px auto;
+  border-radius: 30px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+.isPurchased{
+  text-decoration:line-through;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.shopList input{
+  margin: 20px 10px;
+  height: 30px;
+  border: none;
+  border-radius: 20px;
+  padding-left: 15px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  background-color: #fff;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  padding: 7px 12px;
 }
